--- a/ML - API/Modelo_ML.ipynb
+++ b/ML - API/Modelo_ML.ipynb
@@ -1379,7 +1379,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### **A continuación se utiliza el método de optimización SLSQP, para ptimizar los pesos donde, en este caso sólo se impone la restricción de que estos sean positivos.**"
+        "### **A continuación se utiliza el método del descenso del gradiente, para otimizar los pesos donde, en este caso sólo se impone la restricción de que estos sean positivos.**"
       ],
       "metadata": {
         "id": "5pXgdzN2oPnA"
