--- a/ML - API/Modelo_ML.ipynb
+++ b/ML - API/Modelo_ML.ipynb
@@ -874,7 +874,7 @@
         "### **KDE:**\n",
         "**Inicialización**: Comienza con un conjunto completo de datos que consiste en las ubicaciones de los restaurantes.\n",
         "\n",
-        "**Suavización de las Distribuciones:** Para cada ubicación de restaurante, KDE asigna una distribución suavizada utilizando un kernel. La función kernel es una distribución de probabilidad suavizada centrada en cada punto de datos. Por ejemplo, si se usa el kernel gaussiano, KDE crea una campana de Gauss centrada en cada ubicación de restaurante.\n",
+        "**Suavización de las Distribuciones:** Para cada ubicación de restaurante, KDE asigna una distribución suavizada utilizando un kernel. La función kernel es una distribución de probabilidad suavizada centrada en cada punto de datos. En este caso, se utiliza el kernel Gaussiano, KDE crea una campana de Gauss centrada en cada ubicación de restaurante.\n",
         "\n",
         "**Combinación de Distribuciones:** Las distribuciones suavizadas de todas las ubicaciones de los restaurantes se combinan sumándolas para formar una estimación global de la densidad de probabilidad en todo el espacio geográfico. Cada distribución contribuye a la forma general de la estimación final.\n",
         "\n",
