--- a/ML - API/Modelo_ML.ipynb
+++ b/ML - API/Modelo_ML.ipynb
@@ -1415,7 +1415,7 @@
         "# Pesos iniciales en el rango [0, 1]\n",
         "pesos_iniciales = [0.25, 0.25, 0.25]  # Valores iniciales de los pesos\n",
         "\n",
-        "# Definir la función objetivo para minimizar\n",
+        "# función objetivo para minimizar\n",
         "def funcion_objetivo(pesos):\n",
         "    puntuacion_restaurante = (\n",
         "        pesos[0] * datos_normalizados['densidad_normalizado'] +\n",
@@ -1424,13 +1424,13 @@
         "    )\n",
         "    return -puntuacion_restaurante.sum()\n",
         "\n",
-        "# Definir las restricciones de los pesos (en este caso, positivos)\n",
+        "# restricciones de los pesos (en este caso, positivos)\n",
         "restricciones = [{'type': 'ineq', 'fun': lambda w: w[i]} for i in range(len(pesos_iniciales))]\n",
         "\n",
         "# Definir la tolerancia para la convergencia\n",
         "tolerancia = 1e-6\n",
         "\n",
-        "# Definir las opciones para el algoritmo\n",
+        "# opciones para el algoritmo\n",
         "opciones = {'disp': True, 'gtol': tolerancia}\n",
         "\n",
         "# Variables para almacenar los valores de los pesos durante las iteraciones\n",
@@ -1440,34 +1440,34 @@
         "def capturar_pesos(x):\n",
         "    historial_pesos.append((x[0], x[1], x[2]))\n",
         "\n",
-        "# Optimizar los pesos usando el algoritmo de Descenso del Gradiente con las opciones definidas\n",
+        "# Optimización los pesos usando el algoritmo de Descenso del Gradiente con las opciones definidas\n",
         "resultado = minimize(funcion_objetivo, pesos_iniciales, constraints=restricciones, options=opciones, callback=capturar_pesos)\n",
         "\n",
-        "# Obtener los pesos optimizados\n",
+        "#  pesos optimizados\n",
         "pesos_optimizados = resultado.x\n",
         "\n",
-        "# Calcular la puntuación_restaurante con los pesos optimizados\n",
+        "# Calculo de la puntuación_restaurante con los pesos optimizados\n",
         "datos_normalizados['puntuacion_restaurante'] = (\n",
         "    pesos_optimizados[0] * datos_normalizados['densidad_normalizado'] +\n",
         "    pesos_optimizados[1] * datos_normalizados['avg_rating_normalizado'] +\n",
         "    pesos_optimizados[2] * datos_normalizados['num_of_reviews_normalizado']\n",
         ")\n",
         "\n",
-        "# Redondear los valores a 7 decimales\n",
+        "# Redondeo los valores a 7 decimales\n",
         "datos_normalizados['puntuacion_restaurante'] = datos_normalizados['puntuacion_restaurante'].round(7)\n",
         "\n",
-        "# Ordenar el DataFrame en función de la puntuación restaurante en orden decreciente\n",
+        "# Se ordena el DataFrame en función de la puntuación restaurante en orden decreciente\n",
         "datos_ordenados = datos_normalizados.sort_values(by='puntuacion_restaurante', ascending=False)\n",
         "\n",
-        "# Imprimir los pesos optimizados\n",
+        "# Se muestran los pesos optimizados\n",
         "print(\"Pesos Optimizados:\")\n",
         "for i, peso in enumerate(pesos_optimizados, start=1):\n",
         "    print(f\"Peso {i}: {peso}\")\n",
         "\n",
-        "# Imprimir el número de iteraciones realizadas\n",
+        "# número de iteraciones realizadas\n",
         "print(f\"Número de iteraciones realizadas: {resultado.nit}\")\n",
         "\n",
-        "# Extraer los valores de los pesos para el gráfico de convergencia\n",
+        "# valores de los pesos para el gráfico de convergencia\n",
         "peso1_historial, peso2_historial, peso3_historial = zip(*historial_pesos)\n",
         "\n",
         "# Gráfico de convergencia de los pesos\n",
